--- a/ruleset/neteasemusic.yaml
+++ b/ruleset/neteasemusic.yaml
@@ -7,6 +7,8 @@ payload:
   - DOMAIN-SUFFIX,music.163.com.163jiasu.com
   - DOMAIN-SUFFIX,music.126.net
   - DOMAIN-SUFFIX,music.126.net.163jiasu.com
+  - DOMAIN-SUFFIX,yun-app.net
+  - DOMAIN,iadmat.nosdn.127.net
   - IP-CIDR,39.105.63.80/32,no-resolve
   - IP-CIDR,39.105.175.128/32,no-resolve
   - IP-CIDR,45.254.48.1/32,no-resolve
