--- a/ruleset/disney.yaml
+++ b/ruleset/disney.yaml
@@ -7,7 +7,7 @@ payload:
   - DOMAIN-SUFFIX,abc.com
   - DOMAIN-SUFFIX,abcnews.com
   - DOMAIN-SUFFIX,abcnews.edgesuite.net
-  - DOMAIN-SUFFIX,adobedtm.com
+  # - DOMAIN-SUFFIX,adobedtm.com
   - DOMAIN-SUFFIX,adventuresbydisney.com
   - DOMAIN-SUFFIX,babble.com
   - DOMAIN-SUFFIX,babyzone.com
