--- a/ruleset/specialproxy.yaml
+++ b/ruleset/specialproxy.yaml
@@ -3,3 +3,4 @@ payload:
   - DOMAIN-SUFFIX,adobelogin.com
   - DOMAIN-SUFFIX,googleapis.com
   - DOMAIN-SUFFIX,gstatic.com
+  - DOMAIN-SUFFIX,nintendo.net
