--- a/ruleset/bilibilihmt.yaml
+++ b/ruleset/bilibilihmt.yaml
@@ -13,6 +13,7 @@ payload:
   - DOMAIN-SUFFIX,biliapi.com
   - DOMAIN-SUFFIX,biliapi.net
   - DOMAIN-SUFFIX,bilivideo.com
+  - DOMAIN-SUFFIX,aisee.tv
   - IP-CIDR,45.43.32.234/32,no-resolve
   - IP-CIDR,103.151.150.0/23,no-resolve
   - IP-CIDR,119.29.29.29/32,no-resolve
