--- a/ruleset/domestic.yaml
+++ b/ruleset/domestic.yaml
@@ -682,3 +682,7 @@ payload:
   - DOMAIN-SUFFIX,zhimg.com
   - DOMAIN-SUFFIX,zhongsou.com
   - DOMAIN-SUFFIX,zhuihd.com
+
+
+  # Onedrive CDN
+  - DOMAIN,my.microsoftpersonalcontent.com
