--- a/ruleset/proxy.yaml
+++ b/ruleset/proxy.yaml
@@ -3253,6 +3253,7 @@ payload:
   - DOMAIN-SUFFIX,sharepointonline.com
   - DOMAIN-SUFFIX,spoprod-a.akamaihd.net
   - DOMAIN-KEYWORD,1drv
+  - DOMAIN-KEYWORD,microsoft
   - DOMAIN-KEYWORD,onedrive
   - DOMAIN-KEYWORD,skydrive
   - PROCESS-NAME,OneDrive
